--- a/package.yaml
+++ b/package.yaml
@@ -20,18 +20,26 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/my-project#readme>
 
 dependencies:
-- base >= 4.7 && < 4.19  # Covers base-4.18.x
-- text
-- time
-- servant >= 0.20 && < 0.21  # Updated
-- servant-server >= 0.20 && < 0.21  # Updated
+- base >= 4.7 && < 5
+- servant
+- servant-server
+- servant-lucid
 - warp
+- persistent
+- persistent-postgresql
+- persistent-template
+- monad-logger
+- transformers
 - aeson
+- text
+- mtl
+- containers
+- bytestring
+- directory
 - wai
-- ghc-prim
-- persistent >= 2.14 && < 2.15
-- persistent-sqlite >= 2.13 && < 2.14
-- persistent-template >= 2.12 && < 2.13
+- base
+- lucid
+  
 
 
 ghc-options:
