--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+.env
+*.env
+node_modules
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.hie
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
 .stack-work/
-*~
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
+tailwindcss
+
+static/css/style.min.css
+static/css/style.css
+static/css/*.min.css
