--- a/my-project.cabal
+++ b/my-project.cabal
@@ -48,7 +48,12 @@ library
     , containers
     , directory
     , dotenv
-    , lucid
+    , fast-logger
+    , http-api-data
+    , http-media
+    , http-types
+    , lucid >=2.10.2
+    , lucid-svg
     , monad-logger
     , mtl
     , persistent
@@ -58,8 +63,10 @@ library
     , servant-lucid
     , servant-server
     , text
+    , time
     , transformers
     , wai
+    , wai-extra
     , warp
   default-language: Haskell2010
 
@@ -79,7 +86,12 @@ executable my-project-exe
     , containers
     , directory
     , dotenv
-    , lucid
+    , fast-logger
+    , http-api-data
+    , http-media
+    , http-types
+    , lucid >=2.10.2
+    , lucid-svg
     , monad-logger
     , mtl
     , my-project
@@ -90,8 +102,10 @@ executable my-project-exe
     , servant-lucid
     , servant-server
     , text
+    , time
     , transformers
     , wai
+    , wai-extra
     , warp
   default-language: Haskell2010
 
@@ -112,7 +126,12 @@ test-suite my-project-test
     , containers
     , directory
     , dotenv
-    , lucid
+    , fast-logger
+    , http-api-data
+    , http-media
+    , http-types
+    , lucid >=2.10.2
+    , lucid-svg
     , monad-logger
     , mtl
     , my-project
@@ -123,7 +142,9 @@ test-suite my-project-test
     , servant-lucid
     , servant-server
     , text
+    , time
     , transformers
     , wai
+    , wai-extra
     , warp
   default-language: Haskell2010
