--- a/my-project.cabal
+++ b/my-project.cabal
@@ -26,6 +26,8 @@ source-repository head
 library
   exposed-modules:
       Api
+      Config.JwtAuth
+      Config.PasswordHashing
       Database
       Handlers
       Helpers.Htmx
@@ -44,6 +46,7 @@ library
   build-depends:
       aeson
     , base
+    , bcrypt
     , bytestring
     , containers
     , directory
@@ -59,7 +62,9 @@ library
     , persistent
     , persistent-postgresql
     , persistent-template
+    , random
     , servant
+    , servant-auth-server
     , servant-lucid
     , servant-server
     , text
@@ -82,6 +87,7 @@ executable my-project-exe
   build-depends:
       aeson
     , base
+    , bcrypt
     , bytestring
     , containers
     , directory
@@ -98,7 +104,9 @@ executable my-project-exe
     , persistent
     , persistent-postgresql
     , persistent-template
+    , random
     , servant
+    , servant-auth-server
     , servant-lucid
     , servant-server
     , text
@@ -122,6 +130,7 @@ test-suite my-project-test
   build-depends:
       aeson
     , base
+    , bcrypt
     , bytestring
     , containers
     , directory
@@ -138,7 +147,9 @@ test-suite my-project-test
     , persistent
     , persistent-postgresql
     , persistent-template
+    , random
     , servant
+    , servant-auth-server
     , servant-lucid
     , servant-server
     , text
