--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - servant
+- servant-auth-server
 - servant-server
 - servant-lucid
 - warp
@@ -48,6 +49,10 @@ dependencies:
 - http-types
 - http-api-data
 - http-media
+- bcrypt
+- random
+- bytestring
+
 # - http-api-data
 # - http-types
 # - web-form-urlencoded
