Refactor apis into smaller apis for better organization

--- a/my-project.cabal
+++ b/my-project.cabal
@@ -26,6 +26,9 @@ source-repository head
 library
   exposed-modules:
       Api
+      Api.Auth
+      Api.Todo
+      Api.User
       Config.JwtAuth
       Config.PasswordHashing
       Database
