Add user and todo handlers, refactor server structure for better organization

--- a/my-project.cabal
+++ b/my-project.cabal
@@ -33,6 +33,9 @@ library
       Config.PasswordHashing
       Database
       Handlers
+      Handlers.Auth
+      Handlers.Todo
+      Handlers.User
       Helpers.Htmx
       Models
       Pages.AuthPage
