--- a/package.yaml
+++ b/package.yaml
@@ -52,7 +52,8 @@ dependencies:
 - bcrypt
 - random
 - bytestring
-
+- jose
+- jwt >= 0.11.0
 # - http-api-data
 # - http-types
 # - web-form-urlencoded
